--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ openssl-vendored = ["hyper-tls/vendored"]
 
 [dependencies]
 anyhow = "1.0"
+async-trait = "0.1.68"
 clap = { version = "4" }
 dashmap = { version = "5.4", features = ["serde"] }
 futures = { version = "0.3", default-features = false }
