--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,8 @@ html5ever = "0.26"
 hyper = { version = "0.14", features = ["client", "server", "tcp", "http1"] }
 hyper-tls = "0.5"
 markup5ever_rcdom = "0.2"
-minijinja = { version = "0.32", features = ["source"] }
-notify-debouncer-mini = { version = "0.2", default-features = false }
+minijinja = { version = "1" }
+notify-debouncer-mini = { version = "0.3", default-features = false }
 once_cell = "1"
 opener = "0.6"
 parking_lot = "0.12"
