--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,16 +18,25 @@ openssl-vendored = ["hyper-tls/vendored"]
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
+bytes = "1.7.2"
 clap = { version = "4" }
-dashmap = { version = "5.4", features = ["serde"] }
+dashmap = { version = "6.1", features = ["serde"] }
 dyn-clone = "1.0"
-fastwebsockets = { version = "0.4", features = ["upgrade"] }
+fastwebsockets = { version = "0.8", features = ["upgrade"] }
 futures = { version = "0.3", default-features = false }
 html5ever = "0.26"
-hyper = { version = "0.14", features = ["client", "server", "tcp", "http1"] }
-hyper-tls = "0.5"
+http-body = "1.0.1"
+http-body-util = "0.1.2"
+hyper = { version = "1.4", features = ["client", "server", "http1"] }
+hyper-tls = "0.6"
+hyper-util = { version = "0.1.8", features = [
+    "service",
+    "client",
+    "client-legacy",
+    "http1",
+] }
 markup5ever_rcdom = "0.2"
-minijinja = { version = "1" }
+minijinja = { version = "2.3" }
 notify-debouncer-mini = { version = "0.3", default-features = false }
 once_cell = "1"
 opener = "0.6"
@@ -43,8 +52,8 @@ syntect = { version = "5", default-features = false, features = [
 time = { version = "0.3", features = ["serde", "serde-well-known"] }
 tokio = { version = "1.26", features = ["rt-multi-thread", "signal", "macros"] }
 toml = "0.7"
-tower = { version = "0.4", features = ["make", "util"] }
-tower-http = { version = "0.4", features = ["fs"] }
+tower = { version = "0.5", features = ["make", "util"] }
+tower-http = { version = "0.5", features = ["fs"] }
 walkdir = "2"
 words-count = "0.1"
 
